--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "limiting\\": "src"
+            "mq\\": "src"
         }
     },
     "require": {
